--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,8 @@
-/testy_online/aplikacja/migrations/0001_initial.py
-/testy_online/aplikacja/migrations/0002_test_questions_number.py
-/testy_online/aplikacja/migrations/0003_results.py
-/testy_online/aplikacja/migrations/0004_rename_results_result.py
-/testy_online/aplikacja/migrations/0005_delete_result.py
-/testy_online/aplikacja/migrations/0006_alter_test_pub_date.py
-/testy_online/aplikacja/migrations/0007_alter_test_pub_date.py
-/testy_online/aplikacja/migrations/__init__.py
 /back in time.mp3
 /django_podsumowanie.txt
 /feeds.pb
 /gong.mp3
 /marszalkowska.mp3
 /next.mp3
-/testy_online/konto/migrations/0001_initial.py
-/testy_online/konto/migrations/0002_auto_20210610_1338.py
-/testy_online/konto/migrations/0003_alter_result_title.py
-/testy_online/konto/migrations/0004_alter_result_title.py
-/testy_online/konto/migrations/0005_alter_result_title.py
-/testy_online/konto/migrations/0006_auto_20210614_1751.py
-/testy_online/konto/migrations/0007_auto_20210614_1808.py
-/testy_online/konto/migrations/0008_result_max_score.py
-/testy_online/konto/migrations/0009_result_user.py
-/testy_online/konto/migrations/0010_alter_result_user.py
-/testy_online/konto/migrations/0011_alter_result_user.py
-/testy_online/konto/migrations/0012_alter_result_completion_date.py
-/testy_online/konto/migrations/__init__.py
 /testy_online/db.sqlite3
-/testy_online/secret_key.txt
+/venv/
